--- a/wp-content/themes/uwsod-2014/style.dev.css
+++ b/wp-content/themes/uwsod-2014/style.dev.css
@@ -6132,7 +6132,7 @@ body.search-open #uwsearcharea .uw-search-wrapper {
 }
 .uw-search-bar-container div.search-form-wrapper {
   float: left;
-  width: calc(100% - 240px);
+  /*width:calc(~"100% - 240px");*/
   outline: 2px solid #ADADAD;
 }
 .uw-search-bar-container div.search-form-wrapper input {
@@ -6286,6 +6286,11 @@ body.search-open #uw-container {
   -ms-transform: matrix(1, 0, 0, 1, 0, 192);
   -o-transform: matrix(1, 0, 0, 1, 0, 192);
   transform: matrix(1, 0, 0, 1, 0, 192);
+}
+@media only screen and (min-width: 768px) {
+  div.search-form-wrapper {
+    width: calc(100% - 240px);
+  }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   #uwsearcharea .center-block {
